# capstone

./: .env.example  .env.production.example  .gitignore  LICENSE  README.md  README.md.backup  STATUS.md  STRUCTURE.md  VIDEO_SCRIPT.md  demo_analyzer.py  insecure_code.py  pyproject.toml  requirements.txt  test_count_param.py  test_file.py  test_file_extraction.py  test_file_filter.py  test_file_with_issues.py  test_multi_step_tools.py  test_why_12_not_13.py
.github/: copilot-ignore.yml  copilot-instructions.md  firestore-integration-plan.md
capstone/: __init__.py  config.py
capstone/agents/: __init__.py
capstone/memory/: __init__.py  schema.py
capstone/tools/: __init__.py  diff_generator.py  github.py
demos/: README.md  demo_analyzer.py  demo_backend_integration.py  demo_composite_queries.py  demo_context.py  demo_context_caching.py  demo_firestore_quick.py  demo_memory.py  demo_orchestrator.py  demo_phased_commits.py  demo_quality_guardian.py  demo_quality_guardian_agent.py  demo_query_agent.py  demo_reporter.py  demo_root_cause.py  demo_trends_agent.py  demo_trends_filtering.py  test_fixtures_local.py
deployment/: .env.deploy.example  .env.dev.example  .env.example  .gitignore  Dockerfile  README.md  check_agent.py  check_logs.py  deploy.py  test_deployed_agent.py  undeploy.py
docs/: architecture-overview.md  capstone-requirements.md  known-limitations.md  market-trends-2025.md  project-plan-v2.md  project-plan-v3-quality-guardian.md  project-plan.md  query-agent-refactoring-plan.md  rag-implementation-summary.md  storage-technology-research.md  testing-strategy.md  unified-testing-architecture.md
docs/archive/: project-plan.md  refactoring-plan.md
docs/diagrams/: README.md  deployment.puml.md  memory-system.puml.md  multi-agent-architecture.puml.md  sequence-flow.puml.md
evalsets/: README.md  guardian_minimal.evalset.json  orchestrator_minimal.evalset.json  quality_guardian.evalset.json  quality_guardian_simple.evalset.json  query_orchestrator.evalset.json  test_fixture_prs.evalset.json
requirements/: base.txt  deploy.txt  dev.txt  test.txt
scripts/: clear_all_data.py  create_test_prs.py  deploy_fixture.py  generate_demo_diff.py  lint.sh  reset_fixture.py  run_tests.sh  setup_dev.sh  setup_test_repo.py  test_firestore_integration.py
src/: __init__.py  agent.py  audit_models.py  config.py  models.py
src/agents/: README.md  __init__.py  analyzer.py  base.py  context.py  formatter.py  orchestrator.py  quality_guardian.py  quality_guardian_v2.py  reporter.py  requirements.txt
src/audit/: __init__.py  engine.py
src/commands/: __init__.py
src/connectors/: __init__.py  base.py  github.py
src/gh_integration/: __init__.py  client.py  webhooks.py
src/github/: context.py
src/handlers/: __init__.py  bootstrap.py
src/memory/: __init__.py  review_memory.py
src/storage/: __init__.py  firestore_client.py  rag_corpus.py
src/tools/: __init__.py  commits_checker_tool.py  complexity_analyzer.py  dependency_analyzer.py  diff_parser.py  github_tool.py  query_tools.py  query_tools_v2.py  rag_tools.py  repo_analyzer_tool.py  repo_merger.py  repository_tools.py  security_scanner.py
tests/: conftest.py  test_changesets.py  test_gemini_rag.py  test_rag_parsing.py  test_rag_structure.py
tests/e2e/: test_query_agent_authors.py  test_query_agent_files.py  test_query_agent_metrics.py  test_query_agent_patterns.py  test_query_agent_trends.py
tests/fixtures/: QUALITY_PATTERNS.md  README.md  README_FIXTURES.md  __init__.py  changesets.py  fast_reset_api.py  mock_pr.py  test_fixture_commits.py  test_repo_fixture.py  test_repo_manager.py
tests/integration/: run_quick_test.py  test_analyzer.py  test_bootstrap_agent.py  test_firestore_integration.py  test_github_client.py  test_pr_context.py  test_quality_guardian.py  test_rag_corpus_integration.py  test_sync_agent.py  test_webhooks.py
tests/unit/: test_audit_engine.py  test_bootstrap_handler.py  test_changesets.py  test_command_parser.py  test_complexity_analyzer.py  test_dependency_analyzer.py  test_diff_parser.py  test_firestore_client.py  test_github_connector.py  test_memory_bank.py  test_orchestrator.py  test_rag_corpus.py  test_repo_merger.py  test_reporter.py  (+1 more)
(+47 files in other folders)
